<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".manajemen_user.UserActivity">

    <ScrollView
        android:id="@+id/scrollView_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="230dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/kotak_atas" />


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="-10dp"
                    android:src="@drawable/foto_profile"
                    app:civ_border_color="#FFFFFF"
                    app:civ_border_width="5dp" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Alexandra"
                android:layout_marginTop="-13dp"
                android:textStyle="bold"
                android:textSize="28sp"
                android:gravity="center"
                android:textColor="#355c7d"/>

            <TextView
                android:id="@+id/tv_profesi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Student"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="#355c7d"/>

            <!--Informasi Pemesan-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:cardUseCompatPadding="true"
                android:padding="16dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!--Nama Lengkap-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_lengkap"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_nama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/alexandra_nova"
                        android:textAlignment="viewEnd"
                        android:textSize="18sp" />

                    <!--Tempat Lahir-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tempat_lahir"
                        android:layout_marginTop="30dp"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_tempat_lahir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/majalengka"
                        android:layout_marginTop="30dp"
                        android:textAlignment="viewEnd"
                        android:textSize="18sp" />

                    <!--Tanggal Lahir-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tanggal_lahir"
                        android:layout_marginTop="60dp"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_tanggal_lahir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:text="@string/_13_mei_2021"
                        android:textAlignment="viewEnd"
                        android:textSize="18sp" />

                    <!--Nomor HP-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="90dp"
                        android:text="@string/nomor_hp"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_nohp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="90dp"
                        android:text="@string/_085625421589"
                        android:textAlignment="viewEnd"
                        android:textSize="18sp" />

                    <!--Email-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="120dp"
                        android:text="@string/email"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="120dp"
                        android:text="@string/alexandra_gmail_com"
                        android:textAlignment="viewEnd"
                        android:textSize="18sp" />

                    <!--Pemasukan-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="150dp"
                        android:text="@string/pemasukan_perbulan"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_pemasukan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="150dp"
                        android:text="@string/rp12_000_000"
                        android:textAlignment="viewEnd"
                        android:textSize="18sp" />
                </FrameLayout>
            </androidx.cardview.widget.CardView>
            <!--Button Edit Profile-->

            <Button
                android:id="@+id/btn_edt_profile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/mybutton"
                android:text="@string/edit_profile"
                android:textSize="15sp"
                app:backgroundTint="@null" />

            <FrameLayout
                android:id="@+id/frame_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </ScrollView>


    <!--  Start Button App Bar  -->
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="center"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/scrollView_top">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavbar"
            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:menu="@menu/navigasi_bawah" />

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        app:layout_anchor="@id/bottomAppBar" />
    <!--  End Button App Bar  -->
</androidx.coordinatorlayout.widget.CoordinatorLayout>